Some other italian translations 🍕

--- a/src/languages/it-IT.json
+++ b/src/languages/it-IT.json
@@ -79,36 +79,36 @@
 	"override_create_higher_than_yourself": "{emote_warn} Non puoi creare un Override con un livello di autorizzazione più alto del tuo",
 	"override_create_invalid_role": "{emote_warn} Non è un ruolo valido",
 	"override_create_invalid_command": "{emote_warn} `{command}` non è un comando valido",
-	"override_create_success": "{emote_success} Successfully created an override with the autorizzazione level of `{clearance}`",
+	"override_create_success": "{emote_success} Override creato correttamente con un livello di autorizzazione di `{clearance}`",
 
-	"override_disable_missing_command": "{emote_warn} Missing command",
-	"override_disable_invalid_command": "{emote_warn} `{command}` is not a valid command",
-	"override_disable_success": "{emote_success} Successfully disabled command `{command}`",
+	"override_disable_missing_command": "{emote_warn} Comando mancante",
+	"override_disable_invalid_command": "{emote_warn} `{command}` non è un comando valido",
+	"override_disable_success": "{emote_success} Il comando `{command}` è stato disabilitato correttamente",
 
-	"override_enable_missing_command": "{emote_warn} Missing command",
-	"override_enable_invalid_command": "{emote_warn} `{command}` is not a valid command",
-	"override_enable_success": "{emote_success} Successfully enabled command `{command}`",
+	"override_enable_missing_command": "{emote_warn} Comando mancante",
+	"override_enable_invalid_command": "{emote_warn} `{command}` non è un comando valido",
+	"override_enable_success": "{emote_success} Il comando `{command}` è stato abilitato correttamente",
 
-	"override_edit_invalid_part": "{emote_warn} Missing required argument `part`, can be either `role` or `command`",
-	"override_edit_missing_name": "{emote_warn} Missing required argument `role/command name`",
-	"override_edit_missing_clearance": "{emote_warn} Missing required argument `clearance`",
-	"override_edit_non_number": "{emote_warn} `{clearance}` is not valid clearance type",
-	"override_edit_less_than_0": "{emote_warn} The clearance level can't be less than or equal to 0",
-	"override_edit_more_than_100": "{emote_warn} The clearance level can't be more than or equal to 100",
-	"override_edit_higher_than_yourself": "{emote_warn} You cannot create an override with a higher clearance level than your clearance level",
-	"override_edit_invalid_role": "{emote_warn} Not a valid role",
-	"override_edit_invalid_command": "{emote_warn} `{command}` is not a valid command",
-	"override_edit_non_existent_override_command": "{emote_warn} No override was found for that command, you need to create an override to be able to edit it",
-	"override_edit_non_existent_override_role": "{emote_warn} No override was found for that role, you need to create an override to be able to edit it",
-	"override_edit_success": "{emote_success} Successfully updated the override with a new clearance level of `{clearance}`",
+	"override_edit_invalid_part": "{emote_warn} Argomento richiesto mancante `part`, può essere sia un `ruolo` che un `comando`",
+	"override_edit_missing_name": "{emote_warn} Argomento richiesto mancante `nome del ruolo/comando`",
+	"override_edit_missing_clearance": "{emote_warn} Argomento richiesto mancante `autorizzazione`",
+	"override_edit_non_number": "{emote_warn} `{clearance}` non è un tipo di autorizzazione valido",
+	"override_edit_less_than_0": "{emote_warn} Il livello di autorizzazione non può essere minore o uguale a 0",
+	"override_edit_more_than_100": "{emote_warn} Il livello di autorizzazione non può essere maggiore o uguale a 100",
+	"override_edit_higher_than_yourself": "{emote_warn} Non puoi creare un Override con un livelllo di autorizzazione maggiore del tuo",
+	"override_edit_invalid_role": "{emote_warn} Non è un ruolo valido",
+	"override_edit_invalid_command": "{emote_warn} `{command}` non è un comando valido",
+	"override_edit_non_existent_override_command": "{emote_warn} Nessun Override è stato trovato per questo comando, dovrai creare un Override prima di poterlo modificare",
+	"override_edit_non_existent_override_role": "{emote_warn} Nessun Override è tato trovato per questo ruolo, dovrai creare un Override prima di poterlo modificare",
+	"override_edit_success": "{emote_success} L'Override è stato modificato correttamente con un livello di autorizzazione di `{clearance}`",
 
-	"override_remove_invalid_part": "{emote_warn} Missing required argument `part`, can be either `role` or `command`",
-	"override_remove_missing_name": "{emote_warn} Missing required argument `role/command name`",
-	"override_remove_non_existent_override_command": "{emote_warn} No command override was found with that name",
-	"override_remove_non_existent_override_role": "{emote_warn} No role override was found with that id/mention",
-	"override_remove_success": "{emote_success} Successfully removed the command",
+	"override_remove_invalid_part": "{emote_warn} Argomento mancante richiesto `part`, può essere sia un `ruolo` che un `comando`",
+	"override_remove_missing_name": "{emote_warn} Argomento mancante richiesto `nome del ruolo/comando`",
+	"override_remove_non_existent_override_command": "{emote_warn} Nessun Override del comando è stato trovato con questo nome",
+	"override_remove_non_existent_override_role": "{emote_warn} Nessun Override del ruolo è stato trovato con questo ID/menzione",
+	"override_remove_success": "{emote_success} Comando rimosso correttamente",
 
-	"automod_missing_limit": "{emote_warn} Missing required argument `limit`, can be any value higher `0`",
+	"automod_missing_limit": "{emote_warn} Argomento mancante richiesto `limit`, può essere qualsiasi valore maggiore di `0`",
 	"automod_missing_item_add": "{emote_warn} Missing required argument `item` that should be added to the automod",
 	"automod_missing_item_remove": "{emote_warn} Missing required argument `item` that should be removed from the automod",
 	"automod_missing_punishment": "{emote_warn} Missing required argument `punishment`, can be either `LOG`, `WARN`, `KICK` or `BAN`",
