new log: messageUpdates

--- a/src/languages/en-US.json
+++ b/src/languages/en-US.json
@@ -32,9 +32,11 @@
 	"event_message_args_missing": "{emote_warn} Missing argument `{arg}`. Expected `{arg_expected}` got `{arg_provided}`\n{emote_wrench} **Correct usage:** {usage}",
 	"event_message_args_unexpected_list": "{emote_fail} Cannot parse `{arg}` as `{arg_expected}`.\n{emote_wrench} **Correct arguments:** {usage}",
 	"event_message_args_missing_list": "{emote_warn} Missing argument `{arg}`. Expected `{arg_expected}` got `{arg_provided}`\n{emote_wrench} **Correct arguments:** {usage}",
-	"event_message_edit": "{emote_edit} Message from **{target_tag}** `{target_id}` was updated in <#{channel_id}>\n`ID (channel-message): {after_channel_id}-{after_id}`\n**B:** {before}\n**A:** {after}",
 	"event_message_delete": "{emote_trash} Message from **{target_tag}** `{target_id}` was deleted in <#{channel_id}>\n`ID (channel-message): {after_channel_id}-{after_id}`\n{content} \n{attachment}\n{embed}",
 	"event_message_delete_special": "{emote_trash} Message from **{target_tag}** `{target_id}` was deleted in <#{channel_id}>\n`ID (channel-message): {after_channel_id}-{after_id}`",
+	"event_message_update": "{emote_edit} Message from **{target_tag}** `{target_id}` was updated in <#{channel_id}>\n`ID (channel-message): {after_channel_id}-{after_id}`\n**B:** {beforeContent}\n**A:** {afterContent}",
+	"event_message_update_special": "{emote_edit} Message from **{target_tag}** `{target_id}`  was updated in <#{channel_id}>\n`ID (channel-message): {after_channel_id}-{after_id}`",
+	
 
 	"event_change": "`{part}` from `{before}` to `{after}`",
 	"event_server_update": "{emote_wrench} **{moderator_tag}** `({moderator_id})` has changed the server settings. Changed {changes}",
