updated the link on privacy policy

--- a/src/languages/en-US.json
+++ b/src/languages/en-US.json
@@ -247,7 +247,7 @@
 
 	"license_license": "📜 This bot is licensed under the MIT license, for more info see the full license **[here](https://github.com/TestersQTs/Bulbbot/blob/master/LICENSE)**",
 
-	"privacy_policy": "📜 View the privacy policy of the bot **[here](https://www.notion.so/Bulbbot-Privacy-Policy-cc22832e352145759d335132a956a252)**",
+	"privacy_policy": "📜 View the privacy policy of the bot **[here](https://bulbbot.mrphilip.xyz/privacy-policy)**",
 
 	"github_source_code": "{emote_github} Bulbbot is a fully open source project. You can find the source code at our GitHub repository **[here](https://github.com/TestersQTs/Bulbbot)**",
 
