Moved userinfo.ts to new translator

--- a/src/languages/en-US-new.json
+++ b/src/languages/en-US-new.json
@@ -3,8 +3,8 @@
   "global_execution_cancel": "{{emote_fail}} Command execution cancelled",
   "global_missing_permissions": "{{emote_lock}} Missing permission(s)",
   "global_missing_permissions_bot": "The bot is missing crucial permissions to perform this command. Please check the bots permissions.\n{{missing}}",
-  "global_cannot_convert": "{{emote_fail}} Cannot convert `{{arg_provided}}` to `{{arg_expected}}`.\n**Correct usage:** {{usage}}",
-  "global_not_found": "{{emote_fail}} Could not find the specified {{type}}. Cannot convert `{{arg_provided}}` to `{{arg_expected}}`.\n**Correct usage:** {{usage}}",
+  "global_cannot_convert": "{{emote_fail}} Cannot convert `{{arg_provided}}` to `{{arg_expected}}`.\n{{emote_wrench}} **Correct usage:** {{usage}}",
+  "global_not_found": "{{emote_fail}} Could not find the specified {{type}}. Cannot convert `{{arg_provided}}` to `{{arg_expected}}`.\n{{emote_wrench}} **Correct usage:** {{usage}}",
   "global_not_found_types": {
     "user": "user",
     "role": "role",
@@ -156,11 +156,11 @@
   "userinfo_embed_profile": "**Profile:** <@{{user.id}}> [`Profile`](https://discord.com/users/{{user.id}})\n",
   "userinfo_embed_avatar": "**Avatar URL:** [Link]({{user.avatarUrl}})\n",
   "userinfo_embed_bot": "**Bot:** {{user.bot}}\n",
-  "userinfo_embed_created": "**Account Creation:** {{user.createdTimestamp}}\n",
-  "userinfo_embed_joined": "**Joined Server:** {{user.joinedTimestamp}}\n",
-  "userinfo_embed_premium": "**Boosting since:** {{user.premiumSinceTimestamp}}\n",
+  "userinfo_embed_created": "**Account Creation:** <t:{{user_age}}:F> (<t:{{user_age}}:R>)\n",
+  "userinfo_embed_joined": "**Joined Server:** <t:{{user_joined}}:F> (<t:{{user_joined}}:R>)\n",
+  "userinfo_embed_premium": "**Boosting since:** <t:{{user_premium}}:F> (<t:{{user_premium}}:R>)\n",
   "userinfo_embed_roles": "**Roles:** {{user_roles}}\n",
-  "userinfo_embed_infractions": "",
+  "userinfo_embed_infractions": "\n**Infractions:** {{emote_inf}} **{{user_infractions}}** infraction(s) in this server",
 
   "serverinfo_embed_owner": "{{emote_owner}} **Owner:** <@{{guild.owner.user.id}}> `{{guild.owner.user.id}}`\n",
   "serverinfo_embed_features": "**Features:**\n{{guild_features}}\n",
