Moved inviteinfo.ts to new translator

--- a/src/languages/en-US-new.json
+++ b/src/languages/en-US-new.json
@@ -222,15 +222,15 @@
   "invite_desc": "**Invite the bot to your server**\n{{bot_invite}}\n\n**Join the support server**\n{{support_guild}}",
 
   "inviteinfo_error": "{{emote_warn}} Unable to find a server with that invite",
-  "inviteinfo_verification_level": "Verification Level: `{guild.verificationLevel}`\n",
-  "inviteinfo_large": "Large: `{guild.large}`\n",
-  "inviteinfo_code": "Code: `{invite.code}`\n",
-  "inviteinfo_inviter_id": "ID: `{invite.inviter.id}`\n",
-  "inviteinfo_inviter_tag": "Tag: `{invite.inviter.tag}`\n",
+  "inviteinfo_verification_level": "Verification Level: `{{guild.verificationLevel}}`\n",
+  "inviteinfo_large": "Large: `{{guild.large}}`\n",
+  "inviteinfo_code": "Code: `{{invite.code}}`\n",
+  "inviteinfo_inviter_id": "ID: `{{invite.inviter.id}}`\n",
+  "inviteinfo_inviter_tag": "Tag: `{{invite.inviter.tag}}`\n",
   "inviteinfo_inviter_avatar": "Avatar: [`Link (4096)`]({{user_avatar}})\n",
-  "inviteinfo_channel_id": "ID: `{invite.channel.id}`\n",
-  "inviteinfo_channel_name": "Name: `{invite.channel.name}`\n",
-  "inviteinfo_channel_nsfw": "NSFW: `{invite.channel.nsfw}`\n",
+  "inviteinfo_channel_id": "ID: `{{invite.channel.id}}`\n",
+  "inviteinfo_channel_name": "Name: `{{invite.channel.name}}`\n",
+  "inviteinfo_channel_nsfw": "NSFW: `{{invite.channel.nsfw}}`\n",
 
   "deafen_already_deaf": "{{emote_fail}} **{{target.tag}}** `({{target.id}})` is already deafened!",
   "undeafen_not_deaf": "{{emote_fail}} **{{target.tag}}** `({{target.id}})` is not deafened!",
