--- a/src/languages/en-US-new.json
+++ b/src/languages/en-US-new.json
@@ -162,11 +162,11 @@
   "userinfo_embed_roles": "**Roles:** {{user_roles}}\n",
   "userinfo_embed_infractions": "\n**Infractions:** {{emote_inf}} **{{user_infractions}}** infraction(s) in this server",
 
-  "serverinfo_embed_owner": "{{emote_owner}} **Owner:** <@{{guild.owner.user.id}}> `{{guild.owner.user.id}}`\n",
+  "serverinfo_embed_owner": "{{emote_owner}} **Owner:** <@{{guild.ownerID}}> `{{guild.ownerID}}`\n",
   "serverinfo_embed_features": "**Features:**\n{{guild_features}}\n",
-  "serverinfo_embed_region": "**Region:** {{guild.region}}\n",
+  "serverinfo_embed_region": "**Region:** {{guild_region}}\n",
   "serverinfo_embed_verification": "**Verification level:** {{guild.verificationLevel}}\n",
-  "serverinfo_embed_created": "**Created at:** {{guild.createdTimestamp}}",
+  "serverinfo_embed_created": "**Created at:** <t:{{guild_age}}:F> (<t:{{guild_age}}:R>)",
 
   "serverinfo_server_stats": "**Server stats**",
   "serverinfo_channel_stats": "**Channel stats**",
