--- a/src/languages/en-US-new.json
+++ b/src/languages/en-US-new.json
@@ -149,6 +149,7 @@
   "automod_violation_website_log": "{{emote_warn}} **{{target.tag}}** `({{target.id}})` has violated the `FORBIDDEN_WEBSITE` check in {{channel}} | Punishment: **{{punishment}}**\n```{{message}}```",
 
   "jumbo_too_many": "{{emote_warn}} Too many emojis provided. The bot currently only supports a max of 10 emojis at a time.",
+  "jumbo_invalid": "{{emote_fail}} Invalid emoji(s) provided. Please use a valid emoji.",
 
   "userinfo_embed_id": "**ID:** {{user.id}}\n",
   "userinfo_embed_username": "**Username:** {{user.username}}\n",
