--- a/src/languages/en-US-new.json
+++ b/src/languages/en-US-new.json
@@ -7,6 +7,7 @@
   "global_not_found": "{{emote_fail}} Could not find the specified {{type}}. Cannot convert `{{arg_provided}}` to `{{arg_expected}}`.\n{{emote_wrench}} **Correct usage:** {{usage}}",
   "global_not_found_types": {
     "user": "user",
+    "member": "member",
     "role": "role",
     "channel": "channel",
     "lang": "language",
