--- a/src/languages/en-US-new.json
+++ b/src/languages/en-US-new.json
@@ -244,8 +244,8 @@
   "duration_invalid_0s": "{{emote_fail}} Duration cannot be lower than **0 seconds**!",
   "duration_invalid_1y": "{{emote_fail}} Duration cannot be higher than **1 year**!",
 
-  "lockdown_locked": "{{emote_success}} Successfully locked down channel {{channel}}",
-  "lockdown_unlocked": "{{emote_success}} Successfully unlocked channel {{channel}}",
+  "lockdown_locked": "{{emote_success}} Successfully locked down channel <#{{channel}}>",
+  "lockdown_unlocked": "{{emote_success}} Successfully unlocked channel <#{{channel}}>",
 
   "mute_muterole_not_found": "{{emote_warn}} This server does not have a mute role configured!\n{{emote_wrench}} **Tip:** You can configure the mute role using the `!configure mute_role` command",
   "mute_not_muted": "{{emote_warn}} **{{target.tag}}** `({{target.id}})` is not currently muted!",
