--- a/src/languages/cs-CZ.json
+++ b/src/languages/cs-CZ.json
@@ -11,10 +11,11 @@
 	"global_no_reason": "Bez důvodu",
 	"global_loading": "{emote_loading} Načítání...",
 	"global_not_in_voice": "{emote_warn} Uživatel není připojen v Hlasovém Kanálu!",
+	"global_unknown_error": "{emote_warn} Objevila se chyba neznámeho původu, zkuste prosím později nebo pokud stav stále přetrvává kontaktujte vývojaře",
 
 	"global_cannot_action_self": "{emote_warn} Tuto akci nemůžeš provést na sobě!",
 	"global_cannot_action_owner": "{emote_warn} Tuto akci nemůžeš provést na majiteli serveru!",
-	"global_cannot_action_role_equal": "{emote_warn} Tuto akci nemůžeš provést na **{user_tag}** protože nemáš větší roli než oni!",
+	"global_cannot_action_role_equal": "{emote_warn} Tuto akci nemůžeš provést na **{user_tag}** protože nemáš vyšší roli než oni!",
 	"global_cannot_action_role_equal_bot": "{emote_warn} Tuto akci nemůžeš provést na **{user_tag}** protože nemám větši roli než oni!",
 	"global_cannot_action_role_higher": "{emote_warn} Tuto akci nemůžeš provést na **{user_tag}** protože má větší roli než ty!",
 	"global_cannot_action_role_higher_bot": "{emote_warn} Tuto akci nemůžeš provést na **{user_tag}** protože má vetší roli než já!",
@@ -26,29 +27,33 @@
 	"event_message_args_missing": "{emote_warn} Chybí argument `{arg}`. Očekáváno argumentů `{arg_expected}` dostal jsem `{arg_provided}`\n{emote_wrench} **Správné použití:** {usage}",
 	"event_message_args_unexpected_list": "{emote_warn} Argument `{arg}` nebyl rozpoznán jako `{arg_expected}`.\n{emote_wrench} **Očekávané argumenty:** {usage}",
 	"event_message_args_missing_list": "{emote_warn} Chybí argument `{arg}`. Očekáváno argumentů `{arg_expected}` dostal jsem `{arg_provided}`\n{emote_wrench} **Očekávané argumenty:** {usage}",
-
+	"event_message_edit": "{emote_edit} Zpráva od **{target_tag}** `{target_id}` byla aktualizována v <#{channel_id}>\n`ID (channel-message): {after_channel_id}-{after_id}` | {time}\n**B:** {before}\n**A:** {after}",
+	"event_message_delete": "{emote_trash} Zpráva od **{target_tag}** `{target_id}` byla smazána <#{channel_id}>\n`ID (channel-message): {after_channel_id}-{after_id}` | {time}\n{content} \n{attachment}\n{embed}",
+	
 	"event_channel_create": "**Vytvořen kanál:** <#{channel_id}> `({channel_type})`",
 	"event_channel_delete": "**Kanál odstraněn:** #{channel_name} `({channel_id})` `({channel_type})`",
-	"event_channel_update_topic_added": "<#{channel_id}> téma kanálu přidáno `{channel_topic}`\n",
-	"event_channel_update_topic_removed": "<#{channel_id}> téma kanálu odebráno\n",
-	"event_channel_update_topic_updated": "<#{channel_id}> téma kanálu změněno z `{oldchannel_topic}` na `{newchannel_topic}`\n",
-	"event_channel_update_name": "<#{channel_id}> název změnen z `#{oldchannel_name}` na `#{newchannel_name}`\n",
-	"event_channel_update_type": "<#{channel_id}> typ zněmen z `{oldchannel_type}` na `{newchannel_type}`\n",
-	"event_channel_update_nsfw_enabled": "<#{channel_id}> NSFW režim byl `zapnut`\n",
-	"event_channel_update_nsfw_disabled": "<#{channel_id}> NSFW režim byl `vypnut`\n",
+	"event_channel_update_topic_added": "Téma kanálu <#{channel_id}> bylo přidáno: `{channel_topic}`\n",
+	"event_channel_update_topic_removed": "Téma kanálu <#{channel_id}> bylo odebráno\n",
+	"event_channel_update_topic_updated": "Téma kanálu <#{channel_id}> bylo změněno z `{oldchannel_topic}` na `{newchannel_topic}`\n",
+	"event_channel_update_name": "Název kanálu <#{channel_id}> byl změnen z `#{oldchannel_name}` na `#{newchannel_name}`\n",
+	"event_channel_update_type": "Typ kanálu <#{channel_id}> byl zněmen z `{oldchannel_type}` na `{newchannel_type}`\n",
+	"event_channel_update_nsfw_enabled": "NSFW režim v kanálu <#{channel_id}> byl `zapnut`\n",
+	"event_channel_update_nsfw_disabled": "NSFW režim v kanálu <#{channel_id}> byl `vypnut`\n",
 
-	"event_member_joined": "{emote_join} **Nový uživatel:** **{user_tag}** `({user_id})` - **Účet vytvořen:** {user_age}",
+	"event_member_joined": "{emote_join} **Nový uživatel:** **{user_tag}** `({user_id})` se připojil - **Účet vytvořen:** {user_age}",
 	"event_member_left": "{emote_leave} **Uživatel se odpojil:** **{user_tag}** `({user_id})`",
 
 	"event_member_update_nickname": "{emote_warn} **{user_tag}** `({user_id})` si změnil přezdívku z `{nick_old}` na `{nick_new}`",
-	"event_member_update_role_add": "{emote_warn} Role **{role}** byla přidána **{user_tag}** `({user_id})`",
-	"event_member_update_role_remove": "{emote_warn} Role **{role}** byla odebrána **{user_tag}** `({user_id})`",
-	"event_member_update_role_add_audit": "{emote_warn} Role **{role}** byla přidána **{user_tag}** `({user_id})` moderátorem **{moderator_tag}** `({moderator_id})`",
-	"event_member_update_role_remove_audit": "{emote_warn} Role **{role}** byla odebrána **{user_tag}** `({user_id})` moderátorem **{moderator_tag}** `({moderator_id})`",
+	"event_member_update_role_add": "{emote_warn} Role **{role}** byla přidána k uživateli **{user_tag}** `({user_id})`",
+	"event_member_update_role_remove": "{emote_warn} Role **{role}** byla odebrána od uživatele **{user_tag}** `({user_id})`",
+	"event_member_update_role_add_audit": "{emote_warn} Role **{role}** byla přidána k uživateli **{user_tag}** `({user_id})` moderátorem **{moderator_tag}** `({moderator_id})`",
+	"event_member_update_role_remove_audit": "{emote_warn} Role **{role}** byla odebrána od uživatele **{user_tag}** `({user_id})` moderátorem **{moderator_tag}** `({moderator_id})`",
 
 	"config_language_success": "{emote_success} Jazyk serveru změněn na `{language}`",
 	"config_language_invalid_args": "{emote_warn} Zadán neplatný jazyk!\n{emote_wrench} Vyber si jazyk z {languages}",
 
+	"config_timezone_success": "{emote_success} Časová zóna serveru byly uspěšně změněna na`{zone}`",
+	
 	"config_logging_success": "{emote_success} Začal jsem zaznamenávat {part} v {channel}",
 	"config_logging_invalid_channel": "{emote_warn} `{channel_name}` nebyl rozpoznán jako platný kanál!",
 	"config_logging_unable_to_send_messages": "{emote_warn} V zadaném kanále nemohu posílat zprávy",
@@ -60,7 +65,11 @@
 
 	"config_prefix_success": "{emote_success} Prefix změněn na `{prefix}`",
 	"config_prefix_missing_args": "{emote_warn} Chybí argument `prefix`",
-
+	"config_prefix_too_long": "{emote_warn} Prefix je moc dlouhý, prefix nesmí být delší jak 255 znaků",
+	
+	"config_autorole_success": "{emote_success} Automaticky přizazováná role pomocí funkce autorole byla změněna",
+	"config_autorole_disable": "{emote_success} Funkce autorole byla vypnuta",
+	
 	"override_create_invalid_part": "{emote_warn} Chybí argument `part`, který může být `role` nebo `command`",
 	"override_create_missing_name": "{emote_warn} Chybí argument `role/command name`",
 	"override_create_missing_clearance": "{emote_warn} Chybí argument `clearance`",
@@ -99,8 +108,31 @@
 	"override_remove_non_existent_override_role": "{emote_warn} No role override was found with that id/mention",
 	"override_remove_success": "{emote_success} Successfully removed the command",
 
+	"automod_missing_limit": "{emote_warn} Chybí argument `limit`, hodnata musí být vyšší než `0`",
+	"automod_missing_item_add": "{emote_warn}  Chybí argument `item` který by měl být přidaný do filtru automoda ",
+	"automod_missing_item_remove": "{emote_warn} Chybí argument `item` který by měl být odstraněn z filtru automoda",
+	"automod_missing_punishment": "{emote_warn} Chybý argument `punishment`, který muže být: `LOG`, `WARN`, `KICK` nebo `BAN`",
+
+	"automod_non_number": "{emote_warn} `{limit}` není platné číslo",
+	"automod_less_than_zero": "{emote_warn} `{limit}` nesmí být menší než 0",
+
+	"automod_not_already_in_database": "{emote_warn} Item `{item}` is not already in the automod",
+	"automod_already_in_database": "{emote_warn} Item `{item}` is already in the automod",
+	"automod_added_to_the_database": "{emote_success} Added `{item}` to `{part}` in the automod",
+	"automod_removed_from_the_database": "{emote_success} Removed `{item}` from `{part}` in the automod",
+
+	"automod_updated_limit": "{emote_success} Updated the limit on `{part}` with a limit of `{limit}`",
+	"automod_updated_punishment": "{emote_success} Updated the punishment on `{part}` with a new punishment of `{punishment}`",
+
+	"automod_enabled": "{emote_success} Automod byl zapnut",
+	"automod_disabled": "{emote_success} Automod byl bypnut",
+	"automod_disabled_feature": "{emote_success} Vypnuto `{part}`",
+
 	"help_command_not_found": "Příkaz s tímto jménem nebyl nalezen",
 
+	"jumbo_invalid_emoji": "{emote_warn} Neplatné emoji, prosím použijte platné emoji",
+	"jumbo_too_many": "{emote_warn} Byl překročen limit emoji, bot zatím podporuje pouze 10 emoji v jedné zprávě",
+	
 	"userinfo_embed_id": "**ID:** {user_id}\n",
 	"userinfo_embed_username": "**Jméno:** {user_name}\n",
 	"userinfo_embed_nickname": "**Přezdívka:** {user_nickname}\n",
@@ -117,7 +149,7 @@
 	"serverinfo_embed_features": "**Vlastnosti:**\n{guild_features}\n",
 	"serverinfo_embed_region": "**Region:** {guild_region}\n",
 	"serverinfo_embed_verification": "**Level ověření:** {guild_verification}\n",
-	"serverinfo_embed_created": "**Vytvořen:** {guild_age}",
+	"serverinfo_embed_created": "**Server vytvořen:** {guild_age}",
 
 	"serverinfo_server_stats": "**Statistiky serveru**",
 	"serverinfo_channel_stats": "**Statistiky kanálu**",
@@ -153,6 +185,7 @@
 
 	"purge_too_many": "{emote_warn} Můžeš vymazat maximálně 200 zpráv najednou",
 	"purge_too_few": "{emote_warn} Nemůžeš vymazat méně jak 1 zprávu :confused: proč bys to vůbec dělal",
+	"purge_success": "{emote_success} Uspěšně bylo vymázáno **{count}** zpráv",
 
 	"verification_non_integer": "{emote_warn} Level musí být číslo",
 	"verification_community_zero": "{emote_warn} Level ověření nesmí být `0` pro komunitní servery!",
@@ -161,7 +194,7 @@
 
 	"ping_latency": "Odezva bota je **{latency_bot}ms**\nOdezva WebSocketu je **{latency_ws}ms**",
 
-	"uptime_uptime": "TBot běží již **{uptime}**",
+	"uptime_uptime": "Bot běží již **{uptime}**",
 
 	"license_license": "📜 Tento bot je licensovaný pod licencí MIT, pro více informací klikni **[zde](https://github.com/TestersQTs/Bulbbot/blob/master/LICENSE)**",
 
@@ -178,6 +211,8 @@
 	"multiunban_success": "{emote_success} {full_list} byli odbanování z důvodu **{reason}**",
 
 	"multikick_success": "{emote_success} {full_list} byli vyhozeni z důvodu **{reason}**",
+
+	"multimute_success": "{emote_success} {full_list} byly umlčeni z důvodu **{reason}**",
 
 	"multiwarn_success": "{emote_success} {full_list} byli varování z důvodu **{reason}**",
 
@@ -199,17 +234,26 @@
 	"slowmode_success_remove": "{emote_success} Odebrán pomalý režim z kanálu {channel}",
 	"slowmode_success": "{emote_success} Pomalý řezim v kanálu {channel} byl nastaven na **{slowmode}**",
 
-	"tempban_invalid_0s": "{emote_warn} Doba nesmí být menší než **0 sekund**!",
-	"tempban_invalid_1y": "{emote_warn} Doba nesmí být větší než **1 rok**!",
+	"tempban_invalid_0s": "{emote_warn} Trvání dočasného banu nesmí být menší než **0 sekund**!",
+	"tempban_invalid_1y": "{emote_warn} Trvání dočasného banu nesmí být větší než **1 rok**!",
 
 	"lockdown_not_boolean": "{emote_warn} Argument `lock` musí být typu Boolean! (`true` nebo `false`)",
-	"lockdown_locked": "{emote_success} Uzamčen kanál {channel}",
-	"lockdown_unlocked": "{emote_success} Odemčen kanál {channel}",
+	"lockdown_locked": "{emote_success} Kanál {channel} uzamčen",
+	"lockdown_unlocked": "{emote_success} Kanál {channel} odemčen",
 
-	"mute_muterole_not_found": "{emote_warn} Tento server nemá nakonfigurovanou mute roli!\n{emote_wrench} **Typ:** Mute roli můžeš nakonfigurovat pomocí `!configure mute_role` command",
-	"mute_success": "{emote_success} Umlčen **{target_tag}** `({target_id})` z důvodu **{reason}** `[#{infractionId}]`",
+	"mute_muterole_not_found": "{emote_warn} Tento server nemá nakonfigurovanou mute roli!\n{emote_wrench} **Typ:** Mute roli můžeš nakonfigurovat pomocí příkazu `!configure mute_role`",
+	"mute_success": "{emote_success} **{target_tag}** `({target_id})` byl umlčen z důvodu **{reason}** `[#{infractionId}]`",
 	"mute_not_muted": "{emote_warn} Uživatel ještě není umlčen!",
 	"mute_already_muted": "{emote_warn} Uživatel je již umlčen!",
+
+	"change_nick_success": "{emote_success} Přezdívka uživatele **{target_tag}** `({target_id})` byla změněna z `{nick_old}` na `{nick_new}` z důvodu **{reason}** `[#{infractionId}]`",
+	"remove_nick_success": "{emote_success} Přezdívka byla odebrána od uživatele **{target_tag}** `({target_id})` z důvodu **{reason}** `[#{infractionId}]`",
+	"change_nick_mod_action_log": "{emote_success} Pŕezdívka uživatele **{target_tag}** `({user_id})` byla {action} z `{nick_old}` na `{nick_new}` moderátorem  **{moderator_tag}** `({moderator_id})` z důvodu **{reason}** `[#{infractionId}]`",
+	"remove_nick_mod_action_log": "{emote_success} Přezdívka byla {action} od uživatele **{target_tag}** `({user_id})` moderátorem **{moderator_tag}** `({moderator_id})` z důvodu **{reason}** `[#{infractionId}]`",
+	"change_nick_fail": "{emote_warn} Změna pŕezdívky uživatele **{target_tag}** `({target_id})` není možná",
+	"already_no_nickname": "{emote_warn} **{target_tag}** `({target_id})` nemá přezdívku na odstranění",
+	"already_has_nickname": "{emote_warn} **{target_tag}** `({target_id})` už má přezdívku `{nick_new}`",
+	"nickname_too_long": "{emote_warn} Přezdívka je moc dlouhá (`{nick_length}`). Přezdívku mužou mít maximální délku 32 znaků",
 
 	"warn_success": "{emote_success} **{user_name}#{user_discriminator}** `({user_id})` byl varován z důvodu **{reason}** `[#{infractionId}]`",
 
@@ -224,13 +268,16 @@
 	"infraction_info_active": "**Aktivní:** {emoji}",
 	"infraction_info_expires": "**Končí:** {timestamp}",
 	"infraction_info_reason": "\n\n**Důvod:** {reason}",
+	"infraction_search_not_found": "{emote_warn} Tento uživatel zatím nemá žádné přestupky!",
 	"infraction_list_not_found": "{emote_warn} Tento server nemá zatím zaznamenané žádné přestupky!",
 	"infraction_claim_success": "{emote_success} Převzal jsi zodpovědnost pro přestupek **#{infractionId}**",
 	"infraction_update_success": "{emote_success} Přestupek **#{infractionId}** byl aktualizován!",
-	"infraction_invalid_arguments": "{emote_warn} Chybí argument `action`, který může být `delete|remove`, `info`, `list|all`, `msearch|modsearch`, `osearch|offendersearch`, `search`, `claim`, `update`",
+	"infraction_invalid_arguments": "{emote_warn} Chybí argument `action`, který může být `delete|remove`, `info`, `list|all`, `msearch|modsearch`, `osearch|offendersearch`, `search`, `claim` nebo `update`",
 
 	"invalid_snowflake": "{emote_warn} `{snowflake}` není SnowFlake",
 	"snowflake_info": "Nevím jestli tento SnowFlake někomu nebo nečemu patří\n\n",
+
+	"commands_help": "Všechny příkazy které BulBot nabízí mužete najít na naši [Stránce](https://docs.bulbbot.mrphilip.xyz/command-list) a na [GitHubu](https://github.com/TestersQTs/Bulbbot/blob/master/docs/CommandList.md)",
 
 	"action_warn": "varován",
 	"action_mute": "umlčen",
@@ -245,5 +292,7 @@
 	"action_unban_auto": "automaticky odmlčen",
 	"action_deafen": "ztlumen",
 	"action_undeafen": "odtlumen",
-	"action_kick_voice": "vyhozen z hlasového kanálu"
+	"action_kick_voice": "vyhozen z hlasového kanálu",
+	"action_change_nick": "změněna",
+	"action_remove_nick": "odebrána"
 }
