--- a/src/languages/en-US-new.json
+++ b/src/languages/en-US-new.json
@@ -189,8 +189,16 @@
   "serverinfo_emotes_none": "No emotes",
 
   "action_success": "{{emote_success}} **{{target.tag}}** `({{target.id}})` has been {{action}} for **{{reason}}** `[#{{infraction_id}}]`",
-  "action_success_multi": "{{emote_success}} {{full_list}} have been {{action}} for **{{reason}}**",
   "action_success_temp": "{{emote_success}} **{{target.tag}}** `({{target.id}})` has been {{action}} until {{until}} for **{{reason}}** `[#{{infraction_id}}]`",
+
+  "action_success_multi": "{{emote_success}} {{full_list}} have been {{action}} for **{{reason}}**",
+  "action_multi_less_than_2": "{{emote_warn}} Selected less than 2 targets. Executing normal {{action}} instead",
+  "action_multi_types": {
+    "ban": "ban",
+    "kick": "kick",
+    "unban": "unban",
+    "warn": "warn"
+  },
 
   "already_banned": "{{emote_warn}} **{{target.tag}}** `({{target.id}})` has already been banned for `{{reason}}`",
   "not_banned": "{{emote_fail}} **{{target.tag}}** `({{target.id}})` is not banned from the server!",
