Moved configure logging to new translator

--- a/src/languages/en-US-new.json
+++ b/src/languages/en-US-new.json
@@ -83,10 +83,10 @@
   "config_language_success": "{{emote_success}} Successfully changed the server language to `{{language}}`",
   "config_timezone_success": "{{emote_success}} Successfully changed the server timezone to `{{timezone}}`",
 
-  "config_logging_success": "{{emote_success}} Successfully started logging `{{logging_type}}` in {{channel}}",
-  "config_logging_remove": "{{emote_success}} Successfully removed logging for `{{logging_type}}` from {{channel}}",
-  "config_logging_unable_to_send_messages": "{{emote_fail}} The bot is missing crucial permissions to send messages in {{channel}}",
-  "config_logging_all_confirm": "{{emote_warn}} Are you sure you want to add all logging types to {{channel}}? This will begin to log all loggable actions in the selected channel.",
+  "config_logging_success": "{{emote_success}} Successfully started logging `{{logging_type}}` in <#{{channel}}>",
+  "config_logging_remove": "{{emote_success}} Successfully removed logging for `{{logging_type}}` from <#{{channel}}>",
+  "config_logging_unable_to_send_messages": "{{emote_fail}} The bot is missing crucial permissions to send messages in <#{{channel}}>",
+  "config_logging_all_confirm": "{{emote_warn}} Are you sure you want to add all logging types to <#{{channel}}>? This will begin to log all loggable actions in the selected channel.",
 
   "config_mute_success": "{{emote_success}} Successfully updated the mute role to {{role}}",
   "config_mute_unable_to_manage": "{{emote_fail}} The bot is unable to manage the selected role. Move the bot's role higher than the selected role.",
