--- a/src/languages/en-US-new.json
+++ b/src/languages/en-US-new.json
@@ -88,7 +88,7 @@
   "config_logging_unable_to_send_messages": "{{emote_fail}} The bot is missing crucial permissions to send messages in <#{{channel}}>",
   "config_logging_all_confirm": "{{emote_warn}} Are you sure you want to add all logging types to <#{{channel}}>? This will begin to log all loggable actions in the selected channel.",
 
-  "config_mute_success": "{{emote_success}} Successfully updated the mute role to {{role}}",
+  "config_mute_success": "{{emote_success}} Successfully updated the mute role",
   "config_mute_unable_to_manage": "{{emote_fail}} The bot is unable to manage the selected role. Move the bot's role higher than the selected role.",
 
   "config_prefix_success": "{{emote_success}} Successfully changed the server prefix to `{{prefix}}`",
